--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <h3 class="links-title">Quick Links</h3>
             <div class="links-list">
               <a href="https://allpilar.xyz" target="_blank" rel="noopener">AllPilar Solutions</a>
-              <a href="https://silassdev.github.io/" target="_blank" rel="noopener">Portfolio</a>
+              <a href="https://silassdev.vercel.app/" target="_blank" rel="noopener">Portfolio</a>
               <a href="https://github.com/silassdev" target="_blank" rel="noopener">GitHub Profile</a>
             </div>
           </div>
